<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_EventView" Id="{0ca105d9-14f3-46d9-8564-5f7d7d802f4f}">
    <Declaration><![CDATA[TYPE ST_EventView :
STRUCT
    nSourceId       : UDINT;
    nEventId        : UDINT;
    Severity        : WSTRING(17);
    ConfirmState   : WSTRING(5);
    sDate           : STRING(23);
    sTime           : STRING(23);
    Computer       : WSTRING;
    sSource         : WSTRING(255);
	MessageText    : WSTRING(255);
    bQuitMessage    : BOOL;
    bConfirmable    : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>